Update ThriftTransportPool to use ThriftService
Updates the ThriftTransportKey to use ThriftService instead of
ThriftClientTypes.

Added the corresponding ThriftService to each ThriftClientType.